--- a/appspec.yml
+++ b/appspec.yml
@@ -1,7 +1,7 @@
 version: 0.0
 os: linux
 files:
-  - source: s3://georges3bucket/code.zip
+  - source: /
     destination: /home/ubuntu
 hooks:
   ApplicationStart:
