--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,14 +1,19 @@
+
 version: 0.2
+
 phases:
+  install:
+    runtime-versions:
+      java: corretto11
+    commands:
+      - echo Installing dependencies...
+      - yum install -y maven
   build:
     commands:
-      - apt-get update
-      - apt-get install -y apt-transport-https ca-certificates curl gnupg lsb-release
-      - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-      - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-      - apt-get update
-      - apt-get install -y docker-ce
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 328679899811.dkr.ecr.us-east-1.amazonaws.com
-      - docker build -t springboot .
-      - docker tag springboot:latest 328679899811.dkr.ecr.us-east-1.amazonaws.com/springboot:latest
-      - docker push 328679899811.dkr.ecr.us-east-1.amazonaws.com/springboot:latest
+      - echo Building JAR file...
+      - mvn package
+artifacts:
+  files:
+    - target/*.jar
+    - install.sh
+    - appspec.yml
